White space fix

--- a/sticky.css
+++ b/sticky.css
@@ -11,7 +11,6 @@ body {
   width: 100%;
   overflow-x: hidden;
   background: #b6b6b4;
-  max-width: 100%;
 }
 
 header {
@@ -85,6 +84,8 @@ nav ul li a:hover {
 
 main {
   padding-bottom: 40rem;
+  width: 100%;
+  height: 100%;
 }
 
 section {
